--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "material-ui": "^0.19.4",
+    "form-urlencoded": "^2.0.4",
     "react": "^16.0.0",
+    "react-aux": "^1.1.0",
     "react-dom": "^16.0.0",
     "react-router": "^3.2.0",
-    "react-scripts": "1.0.14",
-    "styled-components": "^2.2.1"
+    "styled-components": "^2.2.1",
+    "react-linkedin-login": "^1.0.3",
+    "react-scripts": "1.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
