--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "material-ui": "^0.19.4",
     "form-urlencoded": "^2.0.4",
+    "immutable": "^3.8.2",
+    "material-ui": "^0.19.4",
     "react": "^16.0.0",
     "react-aux": "^1.1.0",
     "react-dom": "^16.0.0",
-    "react-router": "^3.2.0",
-    "styled-components": "^2.2.1",
     "react-linkedin-login": "^1.0.3",
-    "react-scripts": "1.0.14"
+    "react-redux": "^5.0.6",
+    "react-router": "^3.2.0",
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "1.0.14",
+    "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
+    "styled-components": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
